Fix color inconsistency in links section on mobile

--- a/css/skin/Carbon/toteskin.css
+++ b/css/skin/Carbon/toteskin.css
@@ -221,7 +221,7 @@ div.selected {
 }
 
 #linksToggle {
-	background-color: #54abe4;
+	background-color: #8b858f;
 }
 
 #lnkLinks {
