--- a/css/skin/Central_Park/toteskin.css
+++ b/css/skin/Central_Park/toteskin.css
@@ -215,7 +215,7 @@ div.selected {
 }
 
 #linksToggle {
-	background-color: #54abe4;
+	background-color: #6c9ffc;
 }
 
 #lnkLinks {
