--- a/css/skin/Horsepower/toteskin.css
+++ b/css/skin/Horsepower/toteskin.css
@@ -221,7 +221,7 @@ div.selected {
 }
 
 #linksToggle {
-	background-color: #54abe4;
+	background-color: #fe0000;
 }
 
 #lnkLinks {
